<resources>
    <string name="app_name">Novid</string>

    <string name="description">👀 Track Covid-19 stats globally</string>
    <string name="global_text_view">🌐 Global</string>
    <string name="time_text_view">🕓 Updated time: </string>
    <string name="message_text_view">✊ Stay strong everyone!</string>

    <string name="confirmed_text_view">😷 Confirmed:</string>
    <string name="death_text_view">💀 Deaths:</string>
    <string name="recovered_text_view">💪 Recovered:</string>

    <string name="stats_button">📊 Detailed Stats</string>
    <string name="compare_button">📏 Compare</string>
    <string name="update_button">🔄 Update</string>

    <string name="old_text_view">📅 Old:</string>
    <string name="new_text_view">👁‍🗨 New:</string>
    <string name="total_text_view">➕ Total:</string>

    <string-array name="countryCodes">
        <item>AF</item>
        <item>AL</item>
        <item>DZ</item>
        <item>AD</item>
        <item>AO</item>
        <item>AG</item>
        <item>AR</item>
        <item>AM</item>
        <item>AU</item>
        <item>AT</item>
        <item>AZ</item>
        <item>BS</item>
        <item>BH</item>
        <item>BD</item>
        <item>BB</item>
        <item>BY</item>
        <item>BE</item>
        <item>BZ</item>
        <item>BJ</item>
        <item>BT</item>
        <item>BO</item>
        <item>BA</item>
        <item>BW</item>
        <item>BR</item>
        <item>BN</item>
        <item>BG</item>
        <item>BF</item>
        <item>BI</item>
        <item>KH</item>
        <item>CM</item>
        <item>CA</item>
        <item>CV</item>
        <item>CF</item>
        <item>TD</item>
        <item>CL</item>
        <item>CN</item>
        <item>CO</item>
        <item>KM</item>
        <item>CG</item>
        <item>CD</item>
        <item>CR</item>
        <item>HR</item>
        <item>CU</item>
        <item>CY</item>
        <item>CZ</item>
        <item>CI</item>
        <item>DK</item>
        <item>DJ</item>
        <item>DM</item>
        <item>DO</item>
        <item>EC</item>
        <item>EG</item>
        <item>SV</item>
        <item>GQ</item>
        <item>ER</item>
        <item>EE</item>
        <item>ET</item>
        <item>FJ</item>
        <item>FI</item>
        <item>FR</item>
        <item>GA</item>
        <item>GM</item>
        <item>GE</item>
        <item>DE</item>
        <item>GH</item>
        <item>GR</item>
        <item>GD</item>
        <item>GT</item>
        <item>GN</item>
        <item>GW</item>
        <item>GY</item>
        <item>HT</item>
        <item>VA</item>
        <item>HN</item>
        <item>HU</item>
        <item>IS</item>
        <item>IN</item>
        <item>ID</item>
        <item>IR</item>
        <item>IQ</item>
        <item>IE</item>
        <item>IL</item>
        <item>IT</item>
        <item>JM</item>
        <item>JP</item>
        <item>JO</item>
        <item>KZ</item>
        <item>KE</item>
        <item>KR</item>
        <item>KW</item>
        <item>KG</item>
        <item>LA</item>
        <item>LV</item>
        <item>LB</item>
        <item>LS</item>
        <item>LR</item>
        <item>LY</item>
        <item>LI</item>
        <item>LT</item>
        <item>LU</item>
        <item>MK</item>
        <item>MG</item>
        <item>MW</item>
        <item>MY</item>
        <item>MV</item>
        <item>ML</item>
        <item>MT</item>
        <item>MR</item>
        <item>MU</item>
        <item>MX</item>
        <item>MD</item>
        <item>MC</item>
        <item>MN</item>
        <item>ME</item>
        <item>MA</item>
        <item>MZ</item>
        <item>MM</item>
        <item>NA</item>
        <item>NP</item>
        <item>NL</item>
        <item>NZ</item>
        <item>NI</item>
        <item>NE</item>
        <item>NG</item>
        <item>NO</item>
        <item>OM</item>
        <item>PK</item>
        <item>PS</item>
        <item>PA</item>
        <item>PG</item>
        <item>PY</item>
        <item>PE</item>
        <item>PH</item>
        <item>PL</item>
        <item>PT</item>
        <item>QA</item>
        <item>XK</item>
        <item>RO</item>
        <item>RU</item>
        <item>RW</item>
        <item>KN</item>
        <item>LC</item>
        <item>VC</item>
        <item>SM</item>
        <item>ST</item>
        <item>SA</item>
        <item>SN</item>
        <item>RS</item>
        <item>SC</item>
        <item>SL</item>
        <item>SG</item>
        <item>SK</item>
        <item>SI</item>
        <item>SO</item>
        <item>ZA</item>
        <item>SS</item>
        <item>ES</item>
        <item>LK</item>
        <item>SD</item>
        <item>SR</item>
        <item>SZ</item>
        <item>SE</item>
        <item>CH</item>
        <item>SY</item>
        <item>TW</item>
        <item>TJ</item>
        <item>TZ</item>
        <item>TH</item>
        <item>TL</item>
        <item>TG</item>
        <item>TT</item>
        <item>TN</item>
        <item>TR</item>
        <item>UG</item>
        <item>UA</item>
        <item>AE</item>
        <item>GB</item>
        <item>US</item>
        <item>UY</item>
        <item>UZ</item>
        <item>VE</item>
        <item>VN</item>
        <item>EH</item>
        <item>YE</item>
        <item>ZM</item>
        <item>ZW</item>
    </string-array>
</resources>
